# alist_cli

./: .gitignore  CLAUDE.md  Cargo.toml  devenv.nix  flake.nix  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
src/: alist_api.rs  alist_api.rs.backup  download.rs  lib.rs  log_bridge.rs  main.rs  tracing_bridge.rs
src/api/: client.rs  mod.rs  operations.rs  rate_limiter.rs  types.rs
src/utils/: crypto.rs  file_ops.rs  mod.rs
tests/: api_tests.rs  crypto_tests.rs
