[package]
name = "alist_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0", features = [
	"json",
	"stream",
	"rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
env_logger = { version = "0", features = ["color"] }
url = "2"
log = "0"
percent-encoding = "2"
clap = { version = "4", features = ["derive"] }
once_cell = "1"
sha1 = "0"
md-5 = "0"

[profile.release]
codegen-units = 1
panic = "abort"
debug = false
lto = true
