[package]
name = "alist_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0", features = [
	"json",
	"socks",
	"rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["full"] }
futures = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
url = "2"
percent-encoding = "2"
clap = { version = "4", features = ["derive"] }
digest = "0"
sha1 = "0"
md-5 = "0"
indicatif = "0"
walkdir = "2"
governor = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter", "fmt"] }

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
panic = "abort"
strip = true
